# circuit-solver

./: .gitignore  pyproject.toml  requirements.txt
circuit_solver/: __init__.py  circuit.py  elements.py  learning.py  utils.py
circuit_solver/examples/: linear bipartite graph.ipynb
circuit_solver/examples/development/: 251030 fix multiple elements bug.ipynb  251030 test new ResistiveElements.ipynb  251104 fix edge ordering bug.ipynb
